[tool.poetry]
name = "guide-oss"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@fermigier.com>"]
license = "GNU Free Documentation License version 1.3"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
Sphinx = "*"
sphinx-sitemap = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
